--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			<a href="run2.html">方块的奥德赛</a>
 		</div>
 		<br>
+		<img src="https://badges.toozhao.com/badges/01FYGBHP4PQCSPQWW8VBBCS627/green.svg" />
 		<h2>Somethings:</h2>
 		<p>C罗 YYDS</p>
 	</body>
